--- a/crm/package.json
+++ b/crm/package.json
@@ -9,10 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "chart.js": "4.2.1",
+    "clsx": "^1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "fs-extra": "^11.1.1",
+    "lz-string": "^1.5.0",
+    "next": "^13.3.0",
+    "pako": "^2.1.0",
+    "primeflex": "3.3.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-spring": "^9.7.1",
+    "react-toastify": "^9.1.2",
+    "react-transition-group": "^4.4.5",
+    "recharts": "^2.5.0",
+    "zlib": "^1.0.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
