--- a/crm/package.json
+++ b/crm/package.json
@@ -12,11 +12,16 @@
     "@headlessui/react": "^1.7.13",
     "chart.js": "4.2.1",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "fs-extra": "^11.1.1",
     "lz-string": "^1.5.0",
+    "nexmo": "^2.9.1",
     "next": "^13.3.0",
+    "nodemailer": "^6.9.1",
+    "npm": "^9.6.4",
+    "nprogress": "^0.2.0",
     "pako": "^2.1.0",
     "primeflex": "3.3.0",
     "primeicons": "^6.0.1",
@@ -28,6 +33,9 @@
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.5.0",
+    "twilio": "^4.10.0",
+    "universal-storage": "^0.0.4",
+    "use-onclickoutside": "^0.4.1",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
