--- a/crm/package.json
+++ b/crm/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "chart.js": "4.2.1",
+    "cloudinary": "^1.36.4",
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "eslint": "8.36.0",
@@ -18,17 +19,21 @@
     "fs-extra": "^11.1.1",
     "jwt-decode": "^3.1.2",
     "lz-string": "^1.5.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nexmo": "^2.9.1",
     "next": "^13.3.0",
     "nodemailer": "^6.9.1",
     "npm": "^9.6.4",
     "nprogress": "^0.2.0",
     "pako": "^2.1.0",
+    "path": "^0.12.7",
     "primeflex": "3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.2",
