--- a/crm/package.json
+++ b/crm/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "fs-extra": "^11.1.1",
+    "html2pdf.js": "^0.10.1",
     "jwt-decode": "^3.1.2",
     "lz-string": "^1.5.0",
     "multer": "^1.4.5-lts.1",
