--- a/crm/package.json
+++ b/crm/package.json
@@ -20,6 +20,7 @@
     "html2pdf.js": "^0.10.1",
     "jwt-decode": "^3.1.2",
     "lz-string": "^1.5.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nexmo": "^2.9.1",
